--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                         <div class="col-lg-3">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Kanun</h1>
+                                    <h1>Libertus Law Firm</h1>
                                     <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
                             </div>
@@ -44,7 +44,7 @@
                                     <p>Opening Hour Mon - Fri</p>
                                 </div>
                                 <div class="text">
-                                    <h2>+123 456 7890</h2>
+                                    <h2>+233 54 1066 278</h2>
                                     <p>Call Us For Free Consultation</p>
                                 </div>
                                 <div class="social">
