--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Kanun - Law Firm Website Template</title>
+        <title>Libertus - Law Firm</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Law Firm Website Template" name="keywords">
-        <meta content="Law Firm Website Template" name="description">
+        <meta content="Libertus Law Firm" name="keywords">
+        <meta content="Libertus Law Firm" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
