--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Kanun - Law Firm Website Template</title>
+        <title>Libertus - Law Firm </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Law Firm Website Template" name="keywords">
-        <meta content="Law Firm Website Template" name="description">
+        <meta content="Libertus Law Firm" name="keywords">
+        <meta content="Libertus Law Firm" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -32,7 +32,7 @@
                         <div class="col-lg-3">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Kanun</h1>
+                                    <h1>Libertus Law Firm</h1>
                                     <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
                             </div>
@@ -44,7 +44,7 @@
                                     <p>Opening Hour Mon - Fri</p>
                                 </div>
                                 <div class="text">
-                                    <h2>+123 456 7890</h2>
+                                    <h2>+233 541 06 6278</h2>
                                     <p>Call Us For Free Consultation</p>
                                 </div>
                                 <div class="social">
